# diarization-simulation

./: .gitignore  README.md  pyproject.toml  tutorial.Rmd  tutorial.ipynb  tutorial.md
diarization_simulation/: __init__.py  diarization.py  init.py  simulate.py  truth.py
diarization_simulation/data/: lena.npz  vtc.npz
examples/: ground_truth.py
