[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diarization-simulation"
version = "0.1.0"
description = "Speech detection simulation package"
dependencies = [
    "pandas",
    "numba",
    "numpy",
    "scipy",
    "tqdm",
    "importlib-resources",
]

[project.optional-dependencies]
truth = [
    "cmdstanpy",
    "ChildProject"
]

[project.scripts]
diarization-simulate = "diarization_simulation.diarization:main"
truth-simulate = "diarization_simulation.truth:main"

[tool.setuptools.package-data]
diarization_simulation = ["data/*.npz"]